--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,5 @@
 plugins:
   - jekyll-redirect-from
 
----
-redirect_from: "http://xn--80ahcclhdjebj9i7a4b6c.xn--p1ai/"
----
+redirect_to :
+  - http://xn--80ahcclhdjebj9i7a4b6c.xn--p1ai/
